--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,12 +10,7 @@ services:
     scheduler:
         container_name: sc_airflow
         image: apache/airflow
-        command:
-            - /bin/bash
-            - -c
-            - |
-                pip install bs4
-                webserver
+        command: bash -c "pip install bs4 && webserver"
                 
 
         restart: always
@@ -30,11 +25,7 @@ services:
         container_name: web_airflow
         image: apache/airflow
         entrypoint: ./scripts/entrypoint.sh
-        command:
-            - /bin/bash
-            - -c
-            - |
-                pip install bs4
+        command: bash -c "pip install bs4"
         restart: always
         depends_on:
             - postgres
