--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,9 @@ services:
         container_name: sc_airflow
         image: apache/airflow
         command: bash -c "pip install bs4"
+        command: pip install bs4
+        command: python pip install bs4
+        command: python -c "pip install bs4"        
         command: scheduler          
         restart: always
         depends_on:
