--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,8 @@ services:
             - POSTGRES_DB=airflow
     scheduler:
         container_name: sc_airflow
-        build: .
+        images: apache/airflow
+        entrypoint: ./scripts/entrypoint2.sh
         command: scheduler          
         restart: always
         depends_on:
@@ -21,7 +22,7 @@ services:
             - ./logs:/opt/airflow/logs
     webserver:
         container_name: web_airflow
-        build: .
+        images: apache/airflow
         entrypoint: ./scripts/entrypoint.sh
         restart: always
         depends_on:
