--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,8 @@ services:
             - POSTGRES_DB=airflow
     scheduler:
         container_name: sc_airflow
-        image: apache/airflow
+        #image: apache/airflow
+        build:.
         command: scheduler
         restart: always
         depends_on:
@@ -21,7 +22,8 @@ services:
             - ./logs:/opt/airflow/logs
     webserver:
         container_name: web_airflow
-        image: apache/airflow
+        #image: apache/airflow
+        build:.
         entrypoint: ./scripts/entrypoint.sh
         restart: always
         depends_on:
